fixed red text issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,13 @@ em {
 
 }
 
+.error {
+    color: red;
+}
 
+label.error {
+    display: inline;
+}
 
 
 .img-block img:hover {
@@ -282,7 +288,7 @@ hr {
     box-shadow: 0px 4px 32px #F7B32B;
     margin-left: 0;
     margin-right: 16px;
-       width: 104px;
+    width: 104px;
     height: 104px;
 
 }
@@ -339,26 +345,6 @@ textarea {
 .form-cont {
     margin-bottom: 16px;
 }
-
-/*.form-cont small{
-    visibility: hidden;
-    color: indianred;
-}
-
-.form-cont.error input{    
-    border-color: indianred;
-
-}
-
-.form-cont.error small{
-    visibility: visible;
-       color: indianred;
-}
-
-.form-cont.success input{
-    border-color: limegreen;
-}
-*/
 
 .form.invalid span {
     visibility: visible;
@@ -473,13 +459,7 @@ textarea {
         font-size: 20px;
     }
 
-    .error {
-        color: red;
-    }
 
-    label.error {
-        display: inline;
-    }
 
     .main-image {
 
